<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie">Movie</string>
    <string name="tv">Tv</string>
    <string name="overview_txt">Overview</string>
    <string name="original_language">Original Language</string>
    <string name="release_date">Release Date</string>
    <string name="status">Status</string>
    <string name="revenue">Revenue</string>
    <string name="vote_avg_desc">Image Vote Average</string>
    <string name="search_hint">Input text</string>
    <string name="budget_detail">Budget</string>
    <string name="cast_detail">Cast</string>
    <string name="popular_chip">Popular</string>
    <string name="upcoming_chip">Upcoming</string>
    <string name="top_rated_chip">Top rated</string>
    <string name="discovery_chip">Discovery</string>
    <string name="type_tv_detail">Type</string>
    <string name="status_detail">Status</string>
    <string name="original_name_detail">Original Name</string>
    <string name="backdrop_img_desc">Backdrop Image</string>
    <string name="desc_start_icon">Star Icon</string>
    <string name="desc_poster_image_in_list">Poster image in list</string>
    <string name="desc_backdrop">Backdrop image</string>
    <string name="desc_poster_image">Poster Image</string>
    <string name="desc_runtime_icon">Runtime icon</string>
    <string name="desc_date_icon">Date icon</string>
    <string name="desc_cast_profile_image">Cast Profile Image</string>
    <string name="desc_icon_star">Icon Star</string>
    <string name="desc_list_nested_carousel_icon_navigate_to">Icon Navigate To</string>
</resources>